--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,11 @@
 service: estimatex
 
+variablesResolutionMode: 20210326
+
 package:
-  exclude:
-  - ./**
-  include:
-  - ./bin/**
+  patterns:
+    - '!./**'
+    - './bin/**'
 
 plugins:
   - serverless-domain-manager
@@ -22,19 +23,22 @@ provider:
   tracing:
     apiGateway: true
     lambda: true
-  iamRoleStatements:
-    # Only allow to a specific dynamo db table
-    - Effect: Allow
-      Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${self:custom.tableName}*'
-      Action:
-        - "dynamodb:*"
-    # Allow all SNS + Xray + ElasticSearch
-    - Effect: "Allow"
-      Resource: "*"
-      Action:
-        - sns:*
-        - xray:PutTraceSegments
-        - xray:PutTelemetryRecords
+
+  iam:
+    role:
+      statements:
+        # Only allow to a specific dynamo db table
+        - Effect: Allow
+          Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${self:custom.tableName}*'
+          Action:
+            - "dynamodb:*"
+        # Allow all SNS + Xray + ElasticSearch
+        - Effect: "Allow"
+          Resource: "*"
+          Action:
+            - sns:*
+            - xray:PutTraceSegments
+            - xray:PutTelemetryRecords
 
 functions:
   # == Authorizers ==
@@ -199,10 +203,10 @@ custom:
   env:
     SNS_PREFIX: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:${self:service}-${self:provider.stage}'
     DB_TABLE_NAME: ${self:custom.tableName}
-    JWT_SECRET: ${ssm:/${self:service}/${self:provider.stage}/JWT_SECRET~true}
+    JWT_SECRET: ${ssm:/${self:service}/${self:provider.stage}/JWT_SECRET}
     PUSHER_APP_ID: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_APP_ID}
-    PUSHER_KEY: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_KEY~true}
-    PUSHER_SECRET: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_SECRET~true}
+    PUSHER_KEY: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_KEY}
+    PUSHER_SECRET: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_SECRET}
     PUSHER_CLUSTER: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_CLUSTER}
 
 resources:
