--- a/serverless.yml
+++ b/serverless.yml
@@ -7,13 +7,10 @@ package:
     - '!./**'
     - './bin/**'
 
-plugins:
-  - serverless-domain-manager
-
 provider:
   name: aws
   runtime: go1.x
-  profile: julian
+  profile: jponc
   memorySize: 128
   region: ap-southeast-2 # Sydney
   stage: ${opt:stage, 'staging'}
@@ -29,7 +26,7 @@ provider:
       statements:
         # Only allow to a specific dynamo db table
         - Effect: Allow
-          Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${self:custom.tableName}*'
+          Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ssm:/${self:service}/${self:provider.stage}/DYNAMODB_TABLE_NAME}*'
           Action:
             - "dynamodb:*"
         # Allow all SNS + Xray + ElasticSearch
@@ -188,7 +185,6 @@ functions:
       PUSHER_CLUSTER: ${self:custom.env.PUSHER_CLUSTER}
 
 custom:
-  tableName: ${self:service}-${self:provider.stage}
   customDomain:
     domainName: ${self:custom.${self:provider.stage}.domain}
     basePath: ''
@@ -197,33 +193,15 @@ custom:
   staging:
     domain: "api-staging.estimatex.io"
     region: "ap-southeast-2" # Sydney
-  production:
+  prod:
     domain: "api.estimatex.io"
     region: "ap-southeast-2" # Sydney
 
   env:
     SNS_PREFIX: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:${self:service}-${self:provider.stage}'
-    DB_TABLE_NAME: ${self:custom.tableName}
+    DB_TABLE_NAME: ${ssm:/${self:service}/${self:provider.stage}/DYNAMODB_TABLE_NAME}
     JWT_SECRET: ${ssm:/${self:service}/${self:provider.stage}/JWT_SECRET}
     PUSHER_APP_ID: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_APP_ID}
     PUSHER_KEY: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_KEY}
     PUSHER_SECRET: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_SECRET}
     PUSHER_CLUSTER: ${ssm:/${self:service}/${self:provider.stage}/PUSHER_CLUSTER}
-
-resources:
-  Resources:
-    Table:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: ${self:custom.tableName}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: PK
-            AttributeType: S
-          - AttributeName: SK
-            AttributeType: S
-        KeySchema:
-          - AttributeName: PK
-            KeyType: HASH
-          - AttributeName: SK
-            KeyType: RANGE
